# kvs

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
integrations/: Cargo.toml
integrations/tests/: cli.rs  kv_store.rs
kvs/: Cargo.toml
kvs/src/: command.rs  error.rs  lib.rs
logformat/: Cargo.toml
logformat/src/: entry.rs  error.rs  index.rs  lib.rs  page.rs  reader.rs  slotted.rs  writer.rs
logformat/tests/: tests.rs
server/: Cargo.toml
server/src/: kv.rs  lib.rs
src/: error.rs  kv.rs  lib.rs  log.rs  wal.rs
store/: Cargo.toml
store/src/: error.rs  kv.rs  lib.rs  wal.rs
store/tests/: kv_store.rs  tests.rs
