[package]
name = "kvs"
version = "0.1.0"
authors = ["Phoebe Bell <minaphoebebell@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
ron = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.7.1"
log = "0.4.8"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"