[package]
name = "kvs"
version = "0.1.0"
authors = ["Phoebe Bell <minaphoebebell@gmail.com>"]
edition = "2018"

[dependencies]
logformat = { path = "../logformat" }
slog = "2.5.2"
slog-async = "2.3.0"
slog-term = "2.4.2"
bincode = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.29.2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"