[package]
name = "server"
version = "0.1.0"
authors = ["Phoebe Bell <minaphoebebell@gmail.com>"]
edition = "2018"

[dependencies]
logformat = { path = "../logformat" }
kvs = { path = "../kvs" }
clap = "2.32.0"
ron = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v1"] }
bincode = "1.2.0"
metrohash = "1.0.6"
slog = { version = "2.5.2", features = ["max_level_debug"] }
slog-async = "2.3.0"
slog-term = "2.4.2"
sled = "0.29.2"
ctrlc = "3.1.3"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"