[package]
name = "store"
version = "0.1.0"
authors = ["Phoebe Bell <minaphoebebell@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
ron = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
logformat = { path = "../logformat" }
uuid = { version = "0.8", features = ["serde", "v1"] }
bincode = "1.2.0"
metrohash = "1.0.6"
slog = "2.5.2"
slog-async = "2.3.0"
slog-term = "2.4.2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"